--- a/GnocchiAlPesto_Paterna 1.html
+++ b/GnocchiAlPesto_Paterna 1.html
@@ -48,11 +48,11 @@ fresco.</li>
 <div id="giallo">
 	<table>
 		<caption> Valori Nutrizionali (Per Porzione) </caption>
-	<caption style="font-size: 20px;color:black;">Informazioni Nutrizionali</caption><!--titolo ed interstazione tabella-->
+	<caption style="font-size: 20 px;color:black;">Informazioni Nutrizionali</caption><!--titolo ed interstazione tabella-->
 	<tr>
 		<th style="rowspan:2;"> Calorie </th>
 		<td> 450 Kcal </td>
-		<th style="text-align:center; colspan:4px">macronutrienti </th>
+		<th style="text-align:center; colspan:4 px">macronutrienti </th>
 	</tr>
 	
 	<tr>
@@ -90,7 +90,7 @@ preparaGnocchi();<br>
 </pre><!--testo con formattazione originale-->
 </div>
 
-<footer id="conclusione"><u>Buon Appetito!</u>Tan - <strong>Ricetta Tradizionale Italiana</strong></footer><!--piede della pagina-->
+<footer id="conclusione"><u>Buon Appetito!</u>- <strong>Ricetta Tradizionale Italiana</strong></footer><!--piede della pagina-->
 </div>
 
 
