--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,9 @@
 
 <div class="tutto">
 <h1> Ricetta degli Gnocchi al pesto </h1>
+	<div class="immagine">
 <img src="immagini/gnocchi.jpg" alt="immagine gocchi">
+	</div>
 <h2 style="color:MediumSeaGreen;text-align:center;"> Istruzioni </h2>
 <div class="verde"><!--prima divisione-->
 	<h3 style="color:MediumSeaGreen;text-align:center;text-decoration:underline;"> ingredienti </h3>
